--- a/admin.html
+++ b/admin.html
@@ -533,6 +533,7 @@
                 Using this schema:
 1. **Top-level keys** in order:  
    - title (string)  
+   - status (string - initial value: draft)
    - createdAt, updatedAt (timestamp objects)  
    - scenarios (object of scenario-objects)  
    - drugInfo (object of drug-info objects)  
