--- a/admin.html
+++ b/admin.html
@@ -96,6 +96,27 @@
                         class="bg-red-500 hover:bg-red-600 text-white px-4 py-2 rounded">
                     Delete Story
                 </button>
+				<div class="mt-2">
+				  <button id="preview-btn"
+						  class="flex items-center bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded">
+					<!-- standard “eye” icon SVG from Heroicons -->
+					<svg xmlns="http://www.w3.org/2000/svg"
+						 class="w-5 h-5 mr-2"
+						 fill="none" viewBox="0 0 24 24"
+						 stroke="currentColor">
+					  <path stroke-linecap="round"
+							stroke-linejoin="round"
+							stroke-width="2"
+							d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
+					  <path stroke-linecap="round"
+							stroke-linejoin="round"
+							stroke-width="2"
+							d="M2.458 12C3.732 7.943 7.523 5 12 5c4.477 0 8.268 2.943 9.542 7-1.274 4.057-5.065 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
+					</svg>
+					Preview
+				  </button>
+				</div>
+
             </div>
             <p id="status-msg" class="mt-2"></p>
 
@@ -143,6 +164,7 @@
         const storyJsonArea = document.getElementById('story-json');
         const uploadBtn = document.getElementById('upload-btn');
         const deleteBtn = document.getElementById('delete-btn');
+		const previewBtn = document.getElementById('preview-btn');
         const createBtn = document.getElementById('create-story-btn');
         const createForm = document.getElementById('create-story-form');
         const subjectInput = document.getElementById('new-story-subject');
@@ -497,7 +519,21 @@
                 showStatus(e.message, 'text-red-600');
             }
         };
-
+		
+		/* ----------------------- PREVIEW STORY -------------------------------------*/
+		
+		previewBtn.onclick = () => {
+		  const rawJson = storyJsonArea.value.trim();
+		  if (!rawJson) {
+			alert('Nothing to preview – please load or create a story JSON first.');
+			return;
+		  }
+		  // URL-encode and open in new tab
+		  const encoded = encodeURIComponent(rawJson);
+		  const previewUrl = `story.html?preview=1&data=${encoded}`;
+		  window.open(previewUrl, '_blank');
+		};
+		
         /* ------------------------- CREATE STORY ----------------------------------- */
 
         // 1. Toggle the form when “Create New Story” is clicked
