added status to orderkeys

--- a/admin.html
+++ b/admin.html
@@ -435,7 +435,7 @@
         /* ------------------------- UTILITIES ------------------------------- */
         function orderKeys(data) {
             // ---------- top-level ----------
-            const topOrder = ['title', 'createdAt', 'updatedAt',
+            const topOrder = ['title', 'status', 'createdAt', 'updatedAt',
                 'scenarios', 'drugInfo', 'summary', 'quiz'];
 
             const result = {};
