--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Use module script to allow imports -->
   <script type="module">
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js';
-    import { getFirestore, collection, getDocs } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js';
+    import { getFirestore, collection, query, where, getDocs } from 'https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore.js';
 
     // ---- YOUR FIREBASE CONFIG HERE ----
     const firebaseConfig = {
@@ -47,8 +47,12 @@
     async function loadStories() {
       const ul = document.getElementById('story-list');
       try {
-        const storiesCol = collection(db, 'stories');
-        const snapshot = await getDocs(storiesCol);
+        // only fetch stories where status == "published"
+		const storiesQuery = query(
+		  collection(db, 'stories'),
+		  where('status', '==', 'published')
+		);
+		const snapshot = await getDocs(storiesQuery);
 
         if (snapshot.empty) {
           ul.innerHTML = '<li class="text-gray-600">No stories found.</li>';
