--- a/admin.html
+++ b/admin.html
@@ -657,7 +657,7 @@
        - options (array of option-objects)
 
 3. **Each option** must have:
-       - text (string)
+       - text (string - value must be 'Back' or identical to one of the drug names in the drugs info)
        - id (string matching one of the scenario keys)
 
 4. **Each drugInfo** must have:
