--- a/story.html
+++ b/story.html
@@ -5,6 +5,17 @@
   <title>Story Engine</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+	  /* simple shake keyframes */
+	  @keyframes shake {
+		0%,100% { transform: translateX(0); }
+		10%,30%,50%,70%,90% { transform: translateX(-5px); }
+		20%,40%,60%,80% { transform: translateX(5px); }
+	  }
+	  .shake {
+		animation: shake 0.5s ease-in-out;
+	  }
+	</style>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-gray-100">
@@ -116,6 +127,19 @@
         // Story text card
         const card = document.createElement('div');
         card.className = 'bg-white p-6 rounded shadow text-lg whitespace-pre-wrap';
+		// —— failure styling —— 
+		if (sc.pathResult === 'failure') {
+		  // 1) add a red tint + red border
+		  card.classList.add('bg-red-50', 'border', 'border-red-400');
+		  // 2) make it shake once
+		  card.classList.add('shake');
+		  // 3) prepend a big ❌ banner
+		  const banner = document.createElement('div');
+		  banner.className = 'flex items-center bg-red-500 text-white px-4 py-2 rounded-t';
+		  banner.innerHTML = `<span class="text-xl mr-2">❌</span><strong>Incorrect choice</strong>`;
+		  card.prepend(banner);
+		}
+
         // highlight drug names inline
         const regex = new RegExp(`(${Object.keys(drugInfo).join('|')})`, 'g');
         sc.text.split(regex).forEach((seg,i) => {
