--- a/admin.html
+++ b/admin.html
@@ -657,8 +657,9 @@
        - options (array of option-objects)
 
 3. **Each option** must have:
-       - text (string - value must be 'Back' or identical to one of the drug names in the drugs info)
+       - text (string)
        - id (string matching one of the scenario keys)
+	   - drugName(string, the name of the chosen drug if this option represents a drug choice)
 
 4. **Each drugInfo** must have:
 
