--- a/admintest.html
+++ b/admintest.html
@@ -659,6 +659,7 @@
 3. **Each option** must have:
        - text (string)
        - id (string matching one of the scenario keys)
+	   - drugName(string, the name of the chosen drug if this option represents a drug choice)
 
 4. **Each drugInfo** must have:
 
