--- a/admin.html
+++ b/admin.html
@@ -691,29 +691,32 @@
 
             try {
                 // 5️⃣ Call your serverless function
-                const res = await fetch(chatEndpoint, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ prompt })
-                });
+				const res = await fetch(chatEndpoint, {
+				  method: 'POST',
+				  headers: { 'Content-Type': 'application/json' },
+				  body: JSON.stringify({ prompt })
+				});
 
-                // first grab the body (JSON or text)
-                let data;
-                try {
-                    data = await res.json();
-                } catch {
-                    const txt = await res.text();
-                    throw new Error(`Invalid JSON response: ${txt}`);
-                }
+				// 6️⃣ Read the body exactly once as text
+				const raw = await res.text();
 
-                // if the status isn’t OK, throw with the returned error info
-                if (!res.ok) {
-                    const msg = data.error || JSON.stringify(data);
-                    throw new Error(`API error ${res.status}: ${msg}\n${data.stack || ''}`);
-                }
+				// 7️⃣ Try to parse JSON out of it
+				let data;
+				try {
+				  data = JSON.parse(raw);
+				} catch {
+				  // if it wasn’t JSON, show the whole response
+				  throw new Error(`Invalid JSON response:\n${raw}`);
+				}
 
-                // otherwise you’ve got your reply
-                const reply = data.reply;
+				// 8️⃣ Check for HTTP errors
+				if (!res.ok) {
+				  const msg = data.error || JSON.stringify(data);
+				  throw new Error(`API error ${res.status}: ${msg}\n${data.stack||''}`);
+				}
+
+				// 9️⃣ Pull out your `reply`
+				const reply = data.reply;
 
 
                 // 6️⃣ Load into the textarea & re-render
